--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.81"
 axum = "0.7.4"
-dotenvy = "0.15.7"
+clap = { version = "4.5.3", features = ["derive", "env"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net"] }
