--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = "1.0.81"
 axum = "0.7.4"
 clap = { version = "4.5.3", features = ["derive", "env"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
