--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 anyhow = "1.0.81"
 axum = "0.7.4"
 clap = { version = "4.5.3", features = ["derive", "env"] }
-tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net", "fs" ] }
+tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net" ] }
 sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
 reqwest = { version = "0.11.26", features = [ "json" ] }
 serde = { version = "1.0.197", features = ["derive"] }
