--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "lint": "eslint ./app --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier ./app --write --cache"
   },
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=8.0.0"
+  },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.4",
+    "pigeon-maps": "^0.21.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ts-pattern": "^5.0.8",
+    "valibot": "^0.30.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.0.0-alpha.9",
