--- a/package.json
+++ b/package.json
@@ -8,30 +8,35 @@
     "build": "tsc && vite build ./app",
     "preview": "vite preview ./app",
     "lint": "eslint ./app --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier ./app --write --cache"
+    "format": "prettier ./app --write --cache --plugin=prettier-plugin-tailwindcss"
   },
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=8.0.0"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.0.17",
     "@tanstack/react-query": "^5.28.4",
     "pigeon-maps": "^0.21.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.1",
     "ts-pattern": "^5.0.8",
     "valibot": "^0.30.0"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "4.0.0-alpha.9",
+    "@iconify-json/lucide": "^1.1.174",
+    "@iconify/tailwind": "^0.1.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.6.0",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.36",
     "prettier": "^3.2.5",
-    "tailwindcss": "4.0.0-alpha.9",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "typescript": "^5.4.2",
     "typescript-eslint": "^7.2.0",
     "vite": "^5.1.6"
